A mock to login

--- a/mockend/src/templates/mocklogin.html
+++ b/mockend/src/templates/mocklogin.html
@@ -45,6 +45,7 @@
 			userData['avatar'] = mockAvatar;
 			userData['shortname'] = mockShortname;
 			userData['email'] = mockEmail;
+			console.log(JSON.stringify(userData));
 			window.localStorage.setItem("User", JSON.stringify(userData));
 		});
 	});
