Added fonts from Googlr Fonts

--- a/templates/home.html
+++ b/templates/home.html
@@ -346,7 +346,7 @@
       <div class="coffee-text">
         <lp-text-languages
           pt-br="Nós adoramos inovação, assim o café e os relacionamentos são os nossos insumos. Se você deseja
-          parabenizar-nos, por favor não tenha medo, faça um convide-nos para um café ;)">
+          parabenizar-nos, por favor não tenha medo, faça um convite para um café ;)">
           We love innovation so the coffee and relationship our inputs. Whether you wants to congratulate us, please don't fear, make an invite for drink coffee ;)
         </lp-text-languages>
       </div>
