--- a/templates/assets/css/appstaticpages.css
+++ b/templates/assets/css/appstaticpages.css
@@ -1,3 +1,8 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400);
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+}
 .containerApp {
 	position: absolute;
 	display: block;
