--- a/templates/home.html
+++ b/templates/home.html
@@ -369,12 +369,12 @@
     <span class="content">
         <p></lp-icons>We happy by you want to be invited!
         <lp-icons icon='social:cake' color="#979797"></lp-icons></p>
-        <form id="inviteForm" action="/invited/" method="post">
+        <form id="inviteForm" action="/request_invite/" method="post">
           <paper-input-decorator label="Your Name">
-              <input is="core-input">
+              <input name="name" is="core-input">
           </paper-input-decorator>
           <paper-input-decorator label="E-mail address">
-              <input is="core-input" type="email">
+              <input is="core-input" type="email" name="email">
           </paper-input-decorator>
           <template is="auto-binding">
           <paper-button style="float: right;" on-tap="{{sendInvite}}">
