Flow mails and backup

--- a/mockend/src/templates/mails/approved_invited.html
+++ b/mockend/src/templates/mails/approved_invited.html
@@ -1,4 +1,4 @@
-<% extends 'mail_base_layout.html' %>
+<% extends 'mails/mail_base_layout.html' %>
 
 <% block content %>
 Seu convite foi aprovado! Acesse %% token_url_register %% para concluir o registro.
