--- a/mockend/src/templates/mails/request_invited.html
+++ b/mockend/src/templates/mails/request_invited.html
@@ -1,4 +1,4 @@
-<% extends 'mail_base_layout.html' %>
+<% extends 'mails/mail_base_layout.html' %>
 
 <% block content %>
 Recebemos sua solicitação de convite para participar do SisComando. Nós ficamos
