--- a/templates/home.html
+++ b/templates/home.html
@@ -318,7 +318,7 @@
   <lp-sop-dialog id="dialogContact" backdrop="true">
     <span class="headline">Contact</span>
     <span class="content">
-        <form action="/contact/" method="post">
+        <form action="/contact" method="post">
           <paper-input-decorator label="Your Name">
               <input is="core-input">
           </paper-input-decorator>
@@ -369,7 +369,7 @@
     <span class="content">
         <p></lp-icons>We happy by you want to be invited!
         <lp-icons icon='social:cake' color="#979797"></lp-icons></p>
-        <form id="inviteForm" action="/request_invite/" method="post">
+        <form id="inviteForm" action="/request_invite" method="post">
           <paper-input-decorator label="Your Name">
               <input name="name" is="core-input">
           </paper-input-decorator>
