--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
       <div class="core-header">
           <div class="appbrand" horizontal layout>
             <span class="logo"> 
-              <img src="assets/img/logo_60.png">
+              <img src="/assets/img/logo_60.png">
             </span>
             <span class="appname">SisComando</span>
           </div>
