--- a/mockend/src/static/assets/css/app.css
+++ b/mockend/src/static/assets/css/app.css
@@ -5,10 +5,8 @@ html, body {
   font-family: 'RobotoDraft', sans-serif;
 }
 core-header-panel {
-  display: block;
-  position: relative;
   height: 100%;
-  min-height: 500px;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 .container {
@@ -34,11 +32,8 @@ sc-input-hashtag {
 }
 
 login-box {
-  margin: 60px auto;
+  margin: 40px auto;
 }
-
-/* ONLY IN APP  */
-
 #loadData {
   position: fixed;
   height: 100%;
@@ -56,85 +51,8 @@ paper-spinner.blue::shadow .circle {
   border-color: #2A99D6;
 }
 .beta {
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-  background-color: rgb(249, 39, 84);
-  color: #FFF;
-  float: left;
-  font-size: 0.6em;
-  padding: 2px;
-  display: inline;
-  height: 1.1em;
-  margin-top: 6px;
-}
 
-.contentShowUsers {
-  margin: 30px auto;
-  padding: 40px;
-  background-color: #F9F9F9;
 }
-.showUsers {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.showUsers .avatar {
-  height: 100px;
-  width: 100px;
-  background-color: #000;
-  -webkit-border-radius: 100px;
-  -moz-border-radius: 100px;
-  border-radius: 100px;
-  border: 5px solid #F2F2F2;
-}
-.showUsers .username {
-  margin-top: 10px;
-}
-
-.showUsers li {
-  display: inline;
-  list-style: none;
-  margin-bottom: 5px;
-  float: left;
-  margin-left: 50px;  
-}
-
-button#loginMock {
-  position: relative;
-  display: block;
-  margin: 40px auto; 
-  width: 100%;
-  margin-top: 10px;
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  -webkit-box-shadow: 0px 1px 3px #666666;
-  -moz-box-shadow: 0px 1px 3px #666666;
-  box-shadow: 0px 1px 3px #666666;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-button#loginMock:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
-
 .sc-input-section {
   display: flex;
   background-color: #EEEEEE;
