--- a/app/src/templates/base_layout.html
+++ b/app/src/templates/base_layout.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <link rel="apple-touch-icon" href="/static/assets/img/touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/img/touch-icon-ipad-retina.png">
   <title>SisComando - Mais fácil, mais social!</title>
 
   <script src="/static/components/webcomponentsjs/webcomponents.min.js"></script>
